--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "xly",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.2",
     "path": "^0.12.7",
     "socket.io": "^2.1.1"
